--- a/templates/csebu/public_home.html
+++ b/templates/csebu/public_home.html
@@ -1,1 +1,456 @@
-public home
+<!DOCTYPE html>
+<html>
+    {% load static %}
+<head>
+	<title>Home</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" ></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="assets/pranta/homepage.css">
+<link rel="stylesheet" type="text/css" href="assets/pranta/footer_pranta.css">
+<link rel="stylesheet" type="text/css" href="assets/sarwar/css/style.css">
+<link rel="stylesheet" type="text/css" href="assets/kakon/kakon.css">
+<link href="https://fonts.googleapis.com/css?family=Charm" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="assets/silvia/slide.css">
+<link rel="stylesheet" type="text/css" href="assets/silvia/noticeboard.css">
+<link rel="stylesheet" type="text/css" href="assets/silvia/contentsall.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="{% static 'css/homepage.css' %}">
+<link rel="stylesheet" href="{% static 'css/footer_pranta.css' %}">
+<link rel="stylesheet" href="{% static 'css/contentsall.css' %}">
+</head>
+
+
+
+<body>
+
+<div class="sticky-top">
+	<nav class="navbar navbar1 navbar-expand-lg navbar-dark" style="background-color: rgb(177, 4, 14);">
+    <div class="d-flex flex-grow-1">
+        <span class="w-100 d-lg-none d-block"><!-- hidden spacer to center brand on mobile --></span>
+        <a class="navbar-brand" href="#">
+            University of Barishal
+        </a>
+        <div class="w-100 text-right">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar7">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </div>
+    <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar7">
+        <ul class="navbar-nav ml-auto flex-nowrap">
+
+      <li class="nav-item">
+     	 <a class="nav-link" href="#">Students</a>
+    	</li>
+    	<li class="nav-item">
+     	 <a class="nav-link" href="#">Faculty & Stuff</a>
+    	</li>
+    	<li class="nav-item">
+     	 <a class="nav-link" href="#">Parents</a>
+    	</li>
+
+    	<li class="nav-item">
+     	 <a class="nav-link" href="#">Alumni</a>
+    	</li>
+
+
+
+
+        </ul>
+    </div>
+</nav>
+
+
+	<nav class="navbar navbar2 navbar-expand-lg navbar-light bg-light " >
+
+    <div class="navbar-collapse collapse w-100 justify-content-center" id="myNavbar7">
+   <ul class="navbar-nav mx-auto flex-nowrap">
+
+
+    	<li class="nav-item">
+     	 <a class="nav-link" href="#">News & Events</a>
+    	</li>
+    	<li class="nav-item">
+     	 <a class="nav-link" href="#">Academics</a>
+    	</li>
+    	<li class="nav-item">
+     	 <a class="nav-link" href="#">Research</a>
+    	</li>
+    	<li class="nav-item">
+     	 <a class="nav-link" href="#">Campus Life</a>
+    	</li>
+    	<li class="nav-item">
+     	 <a class="nav-link" href="#">Admission</a>
+    	</li>
+    	<li class="nav-item">
+     	 <a class="nav-link" href="#">About</a>
+    	</li>
+
+
+
+        </ul>
+    </div>
+</nav>
+</div>
+
+
+<!-- Navbar Close -->
+
+<!-- slidersection -->
+
+<!-- Slider -->
+
+<div class="containernew clear">
+  <div class="imageback ">
+    <img class="bgimage" src="{% static 'image/cover.jpg' %}">
+  </div>
+  <div class="university_name ">
+    <center><h1>University of Barishal</h1></center>
+  </div>
+  <div class="footdesktop">
+    <h3>
+      Explore CSE
+    </h3>
+  </div>
+</div>
+
+
+<!-- Slider end -->
+
+
+
+
+<!-- pranta -->
+<div style="height: 100vh;">
+
+</div>
+<div class="background"> 
+
+<!-- Notice Board End -->
+
+
+
+<div class="containernew">
+<div class="newdivision">
+  <br>
+  <h1 class="csetext text-center"><b>CSE</b></h1>
+  <h2 class="butext  text-center">University of Barishal</h2>
+  <br>
+
+  <div class="row">
+    <div class="col-sm-6 ">
+       <div class="classdiv1">
+        <div class="classdiv1_inside">
+          <h1>SCIENCE & TECHNOLOGY</h1>
+          <h2>Corona Virus Has Lockdown The World <br> We are safe at home</h2>
+        </div>
+         
+       </div>
+    </div>
+
+    <div class="col-sm-6">
+      <div class=row>
+        <div class="col-sm-6">
+            <div class="divisioncover">
+         <img class="divisioncoverimage" src="{% static 'image/cover.jpg' %}">
+         <div class="coverdivisioncontent">
+          <h3>SOCIAL SCIENCE</h3>
+          <p>This is very good. But worst to read <br>Hi hello</p>
+         </div>
+      </div>
+     
+    </div>
+    <div class="col-sm-6">
+          <div class="divisioncover">
+         <img class="divisioncoverimage" src="{% static 'image/cover.jpg' %}">
+         <div class="coverdivisioncontent">
+          <h3>SOCIAL SCIENCE</h3>
+          <p>This is very good. But worst to read <br>Hi hello</p>
+         </div>
+      </div>
+      </div>
+    </div>
+    
+     
+    </div>
+  </div>
+
+
+
+
+  <br>
+  <br>
+    <div class="row">
+    
+
+    <div class="col-sm-6">
+      <div class=row>
+        <div class="col-sm-6">
+            <div class="divisioncover2">
+         <img class="divisioncoverimage" src="{% static 'image/cover.jpg' %}">
+         <div class="coverdivisioncontent">
+          <h3>SOCIAL SCIENCE</h3>
+          <p>This is very good. But worst to read <br>Hi hello</p>
+         </div>
+      </div>
+     
+    </div>
+    <div class="col-sm-6">
+          <div class="divisioncover2">
+         <img class="divisioncoverimage" src="{% static 'image/cover.jpg' %}">
+         <div class="coverdivisioncontent">
+          <h3>SOCIAL SCIENCE</h3>
+          <p>This is very good. But worst to read <br>Hi hello</p>
+         </div>
+      </div>
+      </div>
+    </div>
+    
+     
+    </div>
+    <div class="col-sm-6 ">
+       <div class="classdiv12">
+        <div class="classdiv1_inside">
+          <h1>SCIENCE & TECHNOLOGY</h1>
+          <h2>Corona Virus Has Lockdown The World <br> We are safe at home</h2>
+        </div>
+         
+       </div>
+    </div>
+  </div>
+
+
+
+
+
+<div>
+  <br><br>
+<center>
+  <a class="redbutton" href="#">More News</a>
+  </center>
+  <br><br>
+</div>
+
+
+
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- Contents Start -->
+<div class="container-fluid mid-ran">
+<div class="row">
+  <div class="col-sm-12 col-md-6 col-lg-4 c-mid">
+  <div class="aver cmmon imagetrans">
+    <div class="ig-2 text-center">
+      <img src="{% static 'image/cover.jpg' %}" class="ig item-image" >
+    </div>
+    <div class="cmmon-2">
+      <div>
+        <h4 class="hd-1">Overview</h4>
+      </div>
+      <div>
+        <p class="txt-2">University of Barisal (BU) is devoted to excellence in teaching, learning, and research to ensure creative endeavor for reaching a global height in higher education.</p>
+      </div>
+    </div>
+  
+  </div>
+  
+  </div>
+  <div class="col-sm-12 col-md-6 col-lg-4 c-mid ">
+  <div class="aver-2 cmmon imagetrans">
+    <div class="ig-2 text-center">
+      <img src="{% static 'image/cover.jpg' %}" class="ig item-image" >
+    </div>
+    <div class="cmmon-2">
+      <div>
+        <h4 class="hd-1">Health Care</h4>
+      </div>
+      <div>
+        <p class="txt-2">Care for each university employee and student in precision health 24/7 offering services of medicines, physiotherapy etc.</p>
+      </div>
+    </div>
+  
+  </div>
+  </div>
+  <div class="col-sm-12 col-md-6 col-lg-4 c-mid" >
+  
+  <div class="aver-3 cmmon imagetrans">
+    <div class="ig-2 text-center">
+      <img src="{% static 'image/cover.jpg' %}" width="300px" height="250px" class="ig item-image">
+    </div>
+    <div class="cmmon-2">
+      <div>
+        <h4 class="hd-1">Achievements</h3>
+      </div>
+      <div>
+        <p class="txt-2">Our members achieved the prestigious Nobel Prize, Ekushe-Padak, Bangla Academy Award and other notable national and international awards.</p>
+      </div>
+    </div>
+  
+  </div>
+  
+  </div>
+</div>
+  
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- Footer Part -->
+
+
+<div class="container-fluid footer_content">
+<div class="row">
+  <div class="col-sm-4">
+
+
+    <div class="row">
+      <div class="col-sm-6">
+        <h3 style="font-family: 'Roboto Condensed', sans-serif;" class="text-left"><b>About US</b></h3>
+    <hr>
+    <a href="">Overview</a><br><br>
+    <a href="">University Facts & Acts</a><br><br>
+    <a href="">Mission</a><br><br>
+    <a href="">Achievement</a><br><br>
+    <a href="">Location,Maps & Direction</a><br><br>
+    <a href="">Image Gallary</a><br>
+        
+      </div>
+      <div class="col-sm-6">
+        <h3 style="font-family: 'Roboto Condensed', sans-serif;" class="text-left"><b>Academic</b></h3>
+    <hr>
+    <a href="">Faculties</a><br><br>
+    <a href="">Central Library</a><br><br>
+    <a href="">Research</a><br><br>
+    <a href="">Projects</a><br><br>
+    <a href="">Teachers</a><br><br>
+    <a href="">Staffs</a><br>
+        
+      </div>
+    </div>
+
+    
+
+
+  </div>
+
+  <div class="col-sm-4 imagefooter">
+    <!-- <center><img src="{% static 'image/cover.jpg' %}"></center><br> -->
+      
+  <h3 style="font-family: 'Roboto Condensed', sans-serif;" class="text-center">University of Barisal</h3>
+  <div class="text-center">
+    <i class="fab fa-facebook-f"></i>
+  </div>
+    
+  </div>
+
+  <div class="col-sm-4">
+       <div class="row">
+      <div class="col-sm-6">
+        <h3 style="font-family: 'Roboto Condensed', sans-serif;" class="text-left"><b>Admission</b></h3>
+    <hr>
+    <a href="">Undergraduates Admission</a><br><br>
+    <a href="">Graduates Admission</a><br><br>
+    <a href="">Certificates Course</a><br><br>
+    <a href="">Notice Board</a><br>
+        
+      </div>
+      <div class="col-sm-6">
+        <h3 style="font-family: 'Roboto Condensed', sans-serif;" class="text-left"><b>Campus Life</b></h3>
+    <hr>
+    <a href="">Campus Life</a><br><br>
+    <a href="">Cultural Programs</a><br><br>
+    <a href="">Halls</a><br><br>
+    <a href="">Students Organizations</a><br><br>
+    <a href="">Gallery</a><br>
+
+        
+      </div>
+    </div>
+    
+  </div>
+  
+</div>
+
+
+</div>
+
+
+
+<div class="container-fluid footer_bottom">
+  <div class="row">
+    <div class="col-xs-12 col-sm-3 col-md-3">
+      <p class="txt-left">@ 2020 BU. All right reserved.</p>
+      
+    </div>
+    <div class="col-xs-12 col-sm-9 col-md-9">
+      <ul class="links">
+        <li class="">
+          <a href="#" target="blank">Student login</a>
+        </li>
+        <li class="">
+          <a href="#" target="blank">Home</a>
+        </li>
+        <li class="">
+          <a href="#" target="blank">Gallery</a>
+        </li>
+        <li class="">
+          <a href="#" target="blank">Notice</a>
+        </li>
+        <li class="">
+          <a href="#" target="blank">Jobs</a>
+        </li>
+        <li class="">
+          <a href="#" target="blank">Contact</a>
+        </li>
+
+        <li class="">
+          <a href="#" target="blank">Webmail</a>
+        </li>
+
+      </ul>
+      
+    </div>
+  </div>
+</div>
+
+
+<!-- Footer End -->
+</body>
+</html>
